--- a/finance_system/finance/templates/finance/profile_edit.html
+++ b/finance_system/finance/templates/finance/profile_edit.html
@@ -67,13 +67,13 @@
                         </div>
                         <div class="col-12">
                             <label class="form-label">Электронная почта</label>
-                            <input type="text" class="form-control" value="{{ user.email }}" disabled>
-                            <input type="hidden" name="email" value="{{ user.email }}">
+                            <input type="email" class="form-control" value="{{ form.instance.email|default:user.email }}" readonly>
+                            <input type="hidden" name="email" value="{{ form.instance.email|default:user.email }}">
                             <small class="text-muted">Изменить почту нельзя</small>
                         </div>
                         <div class="col-12">
-                            <label class="form-label">{{ form.phone.label }}</label>
-                            {{ form.phone }}
+                            <label class="form-label" for="id_phone">{{ form.phone.label }}</label>
+                            <input type="text" name="phone" value="{{ form.phone.value|default:'' }}" id="id_phone" class="form-control {% if form.phone.errors %}is-invalid{% endif %}" placeholder="+7 (999) 123-45-67" maxlength="20">
                             {% if form.phone.errors %}<div class="invalid-feedback d-block">{{ form.phone.errors.0 }}</div>{% endif %}
                         </div>
                         <div class="col-md-6">
